--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,8 @@
   --secondary-background-color: #2e2f42;
   --button-background-color-accent: #4d5ae5;
   --button-background-focus: #404bbf;
+
+  --cubic: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* #region General*/
@@ -96,12 +98,25 @@ img {
 
 .header-link {
   display: block;
+  position: relative;
   padding: 24px 0;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.32px;
   color: var(--main-title-color);
+  transition: color var(--cubic);
+}
+
+.header-link.current::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  background: var(--cl-focus);
+  left: 0;
+  bottom: -1px;
+  border-radius: 2px;
 }
 
 .header-link:hover,
@@ -126,6 +141,7 @@ img {
   line-height: 1.5;
   letter-spacing: 0.32px;
   color: #434455;
+  transition: color var(--cubic);
 }
 
 .header-contacts-item:hover,
@@ -136,6 +152,17 @@ img {
 
 /* #region Hero*/
 .hero {
+  max-width: 1440px;
+  height: 600px;
+  margin: 0 auto;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/bg-office-opt.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
   text-align: center;
   padding-top: 188px;
   padding-bottom: 188px;
@@ -173,6 +200,7 @@ img {
   border-radius: 4px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   cursor: pointer;
+  transition: color var(--cubic), background-color var(--cubic);
 }
 
 .hero-button:hover,
@@ -208,6 +236,17 @@ img {
 
 .values-block {
   width: 264px;
+}
+
+.values-icons {
+  width: 100%;
+  height: 112px;
+  margin-bottom: 8px;
+  background-color: #f4f4fd;
+  border-radius: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .values-item {
@@ -273,12 +312,40 @@ img {
 }
 
 .team-job-title {
+  margin-bottom: 8px;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.32px;
   text-align: center;
 }
+
+.team-social-list {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+
+.social-list-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: var(--button-background-color-accent);
+  transition: background-color var(--cubic);
+}
+
+.social-list-link:hover,
+.social-list-link:focus {
+  background-color: var(--button-background-focus);
+}
+
+.team-social-list-icon {
+  fill: #f4f4fd;
+}
+
 /* #endregion */
 
 /* #region Our Portfolio*/
@@ -296,6 +363,40 @@ img {
 
 .portfolio-offer-item {
   width: calc ((100% - 48px) / 3);
+  transition: box-shadow 250ms var(--cubic);
+}
+
+.portfolio-offer-item:hover,
+.portfolio-offer-item:focus {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.portfolio-offer-item:hover .portfolio-top-text,
+.portfolio-offer-item:focus .portfolio-top-text {
+  transform: translateY(0);
+}
+
+.portfolio-pic-text {
+  position: relative;
+  overflow: hidden;
+}
+
+.portfolio-top-text {
+  position: absolute;
+  top: 0;
+  padding-top: 40px;
+  padding-right: 32px;
+  padding-left: 32px;
+  height: 100%;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  background: #4d5ae5;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-offer-text {
@@ -322,9 +423,18 @@ img {
 
 /* #region Footer*/
 .footer {
+  margin-bottom: 16px;
   padding-top: 100px;
   padding-bottom: 100px;
   background-color: var(--secondary-background-color);
+}
+
+.footer-container {
+  display: flex;
+}
+
+.footer-text-container {
+  margin-right: 120px;
 }
 
 .footer-logo {
@@ -350,4 +460,44 @@ img {
   letter-spacing: 0.32px;
   color: #f4f4fd;
 }
+
+.footer-name-icons {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  margin-bottom: 16px;
+  color: #e7e9fc;
+}
+
+.footer-soc-med > .footer-text {
+  margin-bottom: 16px;
+  font-weight: 500;
+}
+
+.footer-social-list {
+  display: flex;
+  gap: 16px;
+}
+
+.footer-social-list-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: var(--button-background-color-accent);
+  transition: background-color var(--cubic);
+}
+
+.footer-social-list-link:hover,
+.footer-social-list-link:focus {
+  background-color: #31d0aa;
+}
+
+.footer-social-list-icon {
+  fill: #f4f4fd;
+}
+
 /* #endregion */
