--- a/css/styles.css
+++ b/css/styles.css
@@ -62,6 +62,8 @@ img {
 .header {
   background-color: #ffffff;
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header-container {
@@ -117,6 +119,7 @@ img {
   left: 0;
   bottom: -1px;
   border-radius: 2px;
+  color: #404bbf;
 }
 
 .header-link:hover,
@@ -140,7 +143,7 @@ img {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.32px;
-  color: #434455;
+  color: var(--cl-focus);
   transition: color var(--cubic);
 }
 
@@ -200,12 +203,11 @@ img {
   border-radius: 4px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   cursor: pointer;
-  transition: color var(--cubic), background-color var(--cubic);
+  transition: background-color var(--cubic);
 }
 
 .hero-button:hover,
 .hero-button:focus {
-  color: #ffffff;
   background-color: var(--button-background-focus);
 }
 /* #endregion */
@@ -239,12 +241,13 @@ img {
 }
 
 .values-icons {
+  display: flex;
   width: 100%;
   height: 112px;
   margin-bottom: 8px;
   background-color: #f4f4fd;
   border-radius: 4px;
-  display: flex;
+  border: 1px solid #8e8f99;
   justify-content: center;
   align-items: center;
 }
@@ -293,6 +296,8 @@ img {
 .team-item {
   background-color: var(--main-background-color);
   border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .team-text {
@@ -362,7 +367,7 @@ img {
 }
 
 .portfolio-offer-item {
-  width: calc ((100% - 48px) / 3);
+  width: calc((100% - 48px) / 3);
   transition: box-shadow 250ms var(--cubic);
 }
 
@@ -385,9 +390,7 @@ img {
 .portfolio-top-text {
   position: absolute;
   top: 0;
-  padding-top: 40px;
-  padding-right: 32px;
-  padding-left: 32px;
+  padding: 40px 32px;
   height: 100%;
   font-weight: 400;
   font-size: 16px;
@@ -431,6 +434,7 @@ img {
 
 .footer-container {
   display: flex;
+  align-items: baseline;
 }
 
 .footer-text-container {
@@ -467,7 +471,7 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   margin-bottom: 16px;
-  color: #e7e9fc;
+  color: ##ffffff;
 }
 
 .footer-soc-med > .footer-text {
