--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@
 }
 
 /* #region General*/
-.body {
+body {
   font-family: 'Roboto', sans-serif;
   color: var(--main-text-color);
   background-color: var(--main-background-color);
@@ -368,7 +368,7 @@ img {
 
 .portfolio-offer-item {
   width: calc((100% - 48px) / 3);
-  transition: box-shadow 250ms var(--cubic);
+  transition: box-shadow var(--cubic);
 }
 
 .portfolio-offer-item:hover,
@@ -390,7 +390,9 @@ img {
 .portfolio-top-text {
   position: absolute;
   top: 0;
+  left: 0;
   padding: 40px 32px;
+  width: 100%;
   height: 100%;
   font-weight: 400;
   font-size: 16px;
@@ -462,7 +464,7 @@ img {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.32px;
-  color: #f4f4fd;
+  color: #ffffff;
 }
 
 .footer-name-icons {
@@ -471,7 +473,7 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   margin-bottom: 16px;
-  color: ##ffffff;
+  color: #ffffff;
 }
 
 .footer-soc-med > .footer-text {
